// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components > N8nButton > props > icon > should render icon button 1`] = `"<button class="button button primary medium withIcon" aria-live="polite"><span class="icon"><aura-icon-stub icon="circle-plus" size="medium" spin="false"></aura-icon-stub></span>Button</button>"`;

exports[`components > N8nButton > props > loading > should render loading spinner 1`] = `"<button class="button button primary medium loading withIcon" disabled="" aria-busy="true" aria-live="polite"><span class="icon"><aura-spinner-stub size="medium" type="dots"></aura-spinner-stub></span>Button</button>"`;

exports[`components > N8nButton > props > square > should render square button 1`] = `
"<button class="button button primary medium square" aria-live="polite">
  <!--v-if--><span>48</span>
</button>"
`;

exports[`components > N8nButton > props > type > should render highlight button 1`] = `
"<button class="button button highlight medium" aria-live="polite">
  <!--v-if-->Button
</button>"
`;

exports[`components > N8nButton > should render correctly 1`] = `
"<button class="button button primary medium" aria-live="polite">
  <!--v-if-->Button
</button>"
`;
